# DualBLDCDriverMagistralV2ROS

./: LICENSE  README.md
src/sinusoidaldriver/: CMakeLists.txt  package.xml
src/sinusoidaldriver/config/: control.yaml  driver.yaml
src/sinusoidaldriver/include/sinusoidaldriver/: comm_driver.h  crc32.h  sinusoidaldriver.h
src/sinusoidaldriver/launch/: sinusoidaltest.launch
src/sinusoidaldriver/src/: comm_driver.cpp  crc32.cpp  dual_driver.cpp  sinusoidaldriver_node.cpp
src/sinusoidaldriver/urdf/: sinusoidaldriver.urdf
